[package]
name = "context-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "contextFFI"

# [[bin]]
# name = "uniffi-bindgen"
# path = "uniffi-bindgen.rs"
# 
# [[bin]]
# name = "uniffi-bindgen-swift"
# path = "uniffi-bindgen-swift.rs"

[dependencies]
log = "0.4.27"
nom = { version = "8.0.0", features = ["alloc"] }
nom_locate = "5.0.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol_str = "0.3.2"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uniffi = { version = "0.29.3", features = ["cli"] }

uuid = { version = "1.0", features = ["v4"] }

reqwest = { version = "0.12", features = ["json"], optional = true }

zip = { version = "0.6", optional = true }
tar = { version = "0.4", optional = true }
dirs = { version = "5.0", optional = true }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }

[package.metadata.uniffi]
cdylib_name = "context_runtime"

[features]
default = ["local-only"]

http-compilation = ["reqwest", "tokio/full"]

local-install = ["zip", "tar", "dirs"]

full = ["http-compilation", "local-install"]

ffi-trace = ["uniffi/ffi-trace"]

local-only = []

desktop = ["local-install"]
mobile = ["http-compilation"]

[[example]]
name = "debug"
