[package]
name = "context_runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]
name = "context_runtime"

[dependencies]
async-trait = "0.1.88"
bumpalo = "3.19.0"
dirs = "5.0"
env_logger = "0.11"
log = "0.4.27"
logos = "0.15.0"
nom = { version = "8.0.0", features = ["alloc"] }
nom_locate = "5.0.0"
pretty_assertions = "1.4.1"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rowan = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uniffi = { version = "0.29.3", features = ["cli"] }
uuid = { version = "1.0", features = ["v4"] }
which = "8.0.0"
zip = "0.6"
tar = "0.4"
tracing = "0.1.41"
futures-util = "0.3.30"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
utilities = { path = "utilities" }
