[package]
name = "uniffi-bindgen-swift"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { version = "0.29.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }

[package.metadata.uniffi]
cdylib_name = "context_runtime"

[features]
ffi-trace = ["uniffi/ffi-trace"]
